--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "studentkeep",
   "version": "1.0.0",
   "description": "Student Management Tool",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
